# gspro

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_FIXES_SUMMARY.md  AUDIT_REPORT.md  BENCHMARK_SUMMARY.md  CLAUDE.md  COLOR_SPEEDUP_RECOMMENDATIONS.md  CPU_COLOR_OPTIMIZATION_SUMMARY.md  CPU_COLOR_SPEEDUP_COMPLETE.md  FINAL_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OPTIMIZATIONS_SUMMARY.md  OPTIMIZATION_COMPLETE_SUMMARY.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS  CONTRIBUTING.md  PRE_COMMIT_SETUP.md  WORKFLOWS.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  build.yml  ci.yml  publish.yml  test.yml
benchmarks/: BENCHMARK_RESULTS.md  COLOR_OPTIMIZATION_OPPORTUNITIES.md  COLOR_ULTRA_OPTIMIZATION.md  CORRECTNESS_VERIFICATION.md  CURRENT_PERFORMANCE_SUMMARY.md  FINAL_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_SUMMARY.md  README.md  analyze_color_bottlenecks.py  analyze_further_optimizations.py  benchmark_activation_lut.py  benchmark_color.py  benchmark_color_fused.py  benchmark_color_lut.py  benchmark_conversions.py  benchmark_default_skip.py  benchmark_filter.py  benchmark_filter_micro.py  benchmark_final_comparison.py  benchmark_final_optimizations.py  benchmark_gsdata_improvements.py  benchmark_new_operations.py  benchmark_optimizations.py  benchmark_transform.py  benchmark_triton_vs_standard.py  benchmark_ultra_optimizations.py  color_optimization_analysis.py  debug_color_difference.py  debug_fused_performance.py  debug_specific_pixels.py  run_all_benchmarks.py  verify_ultra_optimizations_correctness.py
benchmarks/archive/: README.md  analyze_color_bottlenecks.py  analyze_cpu_bottlenecks.py  analyze_further_optimizations.py  analyze_ultra_optimization.py  benchmark_color.py  benchmark_color_fused.py  benchmark_comprehensive.py  benchmark_cpu_ultra_fused.py  benchmark_final_comparison.py  benchmark_final_optimizations.py  benchmark_pure_numpy_api.py  benchmark_ultra_optimizations.py  color_optimization_analysis.py  debug_color_difference.py  debug_fused_performance.py  debug_specific_pixels.py  profile_real_bottleneck.py  verify_color_fused_correctness.py  verify_ultra_optimizations_correctness.py
examples/: filtering_usage.py
src/gslut/: __init__.py  activation.py  color.py  conversions.py  utils.py
src/gspro/: __init__.py  activations.py  color.py  compose.py  constants.py  numba_ops.py  params.py  pipeline.py  protocols.py  transforms.py.backup  utils.py  validators.py
src/gspro/color/: __init__.py  api.py  kernels.py  pipeline.py  presets.py
src/gspro/filter/: __init__.py  api.py  bounds.py  config.py  kernels.py  masks.py  pipeline.py
src/gspro/transform/: __init__.py  api.py  kernels.py  pipeline.py
tests/: test_activation.py  test_activations.py  test_color.py  test_color_pipeline.py  test_compose.py  test_conversions.py  test_copy_on_write.py  test_filter.py  test_filter_mask.py  test_filter_masks.py  test_filter_template.py  test_gsdata_integration.py  test_numba_kernels.py  test_numba_ops.py  test_parameterized_pipelines.py  test_pipeline.py  test_transform_pipeline.py  test_transforms.py  test_transforms_numpy.py
