[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gslut"
version = "0.1.0"
description = "Gaussian Splatting Look-Up Tables - Fast LUT-based operations for 3D Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "OpsiClear" }
]
keywords = [
    "gaussian-splatting",
    "3d-graphics",
    "computer-vision",
    "lut",
    "color-grading",
    "activation-functions"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/OpsiClear/gslut"
Repository = "https://github.com/OpsiClear/gslut"
Issues = "https://github.com/OpsiClear/gslut/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gslut"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=gslut",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N812"]  # N812: Allow lowercase imports as uppercase (e.g., 'import torch.nn.functional as F')

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
